# agent-browser-socket

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json  rust-toolchain.toml  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: release.yml  track-upstream.yml
src/: app.rs  auth.rs  configuration.rs  embedded_binary.rs  main.rs  mcp.rs  screenshot.rs  server.rs
tests/: e2e-binary.mjs  e2e.rs  runtime_behaviors.rs  socket_client.mjs
