[package]
name = "agent-browser-socket"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
config = { version = "0.15", default-features = false, features = ["toml"] }
dirs = "6"
flate2 = "1"
indexmap = "=2.2.6"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secure-string = "0.3"
shlex = "1"
socketioxide = { version = "0.10", features = ["state", "extensions"] }
tokio = { version = "1", features = ["full"] }
url = "=2.4.1"

[build-dependencies]
flate2 = "1"
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "rustls-tls"] }
